Fixed bug with calculator form height - Removed extra space below

--- a/style.css
+++ b/style.css
@@ -95,13 +95,17 @@ input[type="button"], input[type="reset"] {
 
   #cal-container {
     margin: 0;
-    height: 100vh;
+    height: 100%;
     border: none;
+    background: blue;
+    overflow: hidden;
+    box-shadow: none;
+    box-sizing: border-box;
   }
 
   #cal {
     display: table;
-    height: 100%;
+    height: 100vh;
     width: 100%;
   }
 
